[tool.poetry]
name = "djangomockingbird"
version = "1.0.5"
description = "The fastest way to write the fastest Django unit tests"
authors = ["larsvonschaff <larsvonschaff@gmail.com>"]
license = "MIT"
repository = "https://github.com/larsvonschaff/Django-mockingbird"
readme = "README.md"
keywords = ["django", "testing"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
 
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
