[tool.poetry]
name = "djangomockingbird"
version = "1.0.9"
description = "The fastest way to write the fastest Django unit tests"
authors = ["larsvonschaff <larsvonschaff@gmail.com>"]
license = "MIT"
repository = "https://github.com/larsvonschaff/Django-mockingbird"
readme = "README.md"
keywords = ["django", "testing"]

[tool.poetry.dependencies]
python = "^3.7"
django = ">=2.2,<5"
black = ">=21.0"
 
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
